--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "body-parser": "^2.2.0",
         "express": "^5.1.0",
-        "mongoose": "^8.15.0"
+        "mongoose": "^8.15.0",
+        "svix": "^1.66.0"
     }
 }
